@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-29T08:14:50Z",
-  "count_outdated" : 170,
-  "uniques_outdated" : 144,
+  "timestamp" : "2023-08-31T08:14:30Z",
+  "count_outdated" : 171,
+  "uniques_outdated" : 145,
   "count" : 177,
   "uniques" : 151,
   "clones" : [
-    {
-      "timestamp": "2023-08-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-20T00:00:00Z",
       "count": 1,
