@@ -1,3 +1,12 @@
+2023-08-31T08:14:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6034772555 # 1133
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-31
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 144 170 / 151 177
+* notice: next accum: outdated-unq outdated-all / unq all: 145 171 / 151 177
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-17] / []
+
 2023-08-29T08:14:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6009670809 # 1127
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-29
